Moved bridge configuration setup within the operator (#11032)
Signed-off-by: Paolo Patierno <ppatierno@live.com>